kubernetes/cluster/privacy/searxng/searxng.yaml
# Service: searxng
# Ingress: search.brhd.io
# Label: app.kubernetes.io/name: searxng
---
apiVersion: v1
kind: Service
metadata:
  name: searxng
  namespace: privacy
  labels:
    app.kubernetes.io/name: searxng
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
  selector:
    app.kubernetes.io/name: searxng
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: searxng
  namespace: privacy
  labels:
    app.kubernetes.io/name: searxng
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: searxng
  strategy:
    type: RollingUpdate
  revisionHistoryLimit: 1
  template:
    metadata:
      namespace: privacy
      labels:
        app.kubernetes.io/name: searxng
    spec:
      restartPolicy: Always
      containers:
        - name: searxng
          image: ghcr.io/searxng/searxng:2026.2.16-8e824017d
          resources:
            requests:
              memory: 100M
              cpu: 50m
            limits:
              memory: 700M
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 60
          volumeMounts:
            - name: searxng-config-settings
              mountPath: /etc/searxng/settings.yml
              subPath: settings.yml
              readOnly: true
      volumes:
        - name: searxng-config-settings
          configMap:
            name: searxng-config-settings
