kubernetes/cluster/privacy/searxng/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: searxng
  namespace: privacy
  labels:
    app.kubernetes.io/name: searxng
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  rules:
    - host: search.brhd.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: keda-http-interceptor
                port:
                  number: 8080
  tls:
    - hosts:
        - search.brhd.io
